# segmap_annotation

segmapper/include/segmapper/: segmapper.hpp
segmapper/launch/: seg_viewer.launch
segmapper/launch/kitti/: icp_dynamic_outdoor.yaml  kitti_localization.launch  kitti_localization.yaml  kitti_loop_closure.yaml  test.launch  test_loop.launch  test_loop1.launch
segmapper/src/: segmapper.cpp
segmapper/srv/: MySaveMap.srv  SaveMap.srv
segmatch/include/segmatch/: common.hpp  dynamic_voxel_grid.hpp  local_map.hpp  segmatch.hpp  segmented_cloud.hpp
segmatch/include/segmatch/impl/: dynamic_voxel_grid.hpp  local_map.hpp
segmatch/include/segmatch/segmenters/: incremental_segmenter.hpp  segmenter.hpp
segmatch/include/segmatch/segmenters/impl/: incremental_segmenter.hpp
segmatch/src/: opencv_random_forest.cpp  rviz_utilities.cpp  segmatch.cpp
segmatch/src/descriptors/: eigenvalue_based.cpp
segmatch/src/normal_estimators/: simple_normal_estimator.cpp
segmatch/src/recognizers/: correspondence_recognizer_factory.cpp  graph_based_geometric_consistency_recognizer.cpp  incremental_geometric_consistency_recognizer.cpp
segmatch_ros/: CMakeLists.txt  package.xml
segmatch_ros/include/segmatch_ros/: segmatch_worker.hpp
segmatch_ros/src/: segmatch_worker.cpp
